samples/_failures_safe/1761793162_35d38f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09325387.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_09325387.c:133:9: error: expected declaration or statement at end of input
  133 |         }
      |         ^
./samples/SAFE/__tmp_09325387.c:133:9: error: expected declaration or statement at end of input
